--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,3 +18,65 @@ body {
   max-width: 320px;
   margin-bottom: 16px;
 }
+
+img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+}
+
+.search-form {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.gallery {
+  display: flex;
+  gap: 30px;
+  flex-wrap: wrap;
+}
+
+.gallery-item {
+  font-style: inherit;
+  text-decoration: none;
+}
+
+.photo-card {
+  display: inline-block;
+  width: 350px;
+  border: 1px solid rgb(142, 140, 140);
+  border-radius: 10px;
+  background-color: rgb(239, 231, 197);
+}
+
+.photo-box {
+  min-width: 350px;
+  height: 250px;
+}
+
+.info {
+  display: flex;
+  gap: 15px;
+  justify-content: center;
+  padding: 10px 20px;
+
+  color: black;
+  font-weight: 500;
+  font-size: 16px;
+  text-align: center;
+}
+
+.info-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.load-more {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
+}
